more GC output